Fixed paragraph issue on smaller devices
- Added overflow-wrap: break-word; to paragraphs to stop e-mail address from
overflowing into the margins

--- a/css/styles.css
+++ b/css/styles.css
@@ -232,6 +232,7 @@ i {
   }
   p {
     text-shadow: 2px 2px 4px black;
+    overflow-wrap: break-word;
   }
   #main-content-container  {
     padding-left: 0;
@@ -239,9 +240,6 @@ i {
   #intro-text-container {
     padding: 1rem;
   }
-  /* #intro-image-container {
-    display: none;
-  } */
   #email-sidebar-container {
     display: none;
   }
